# docs/swagger.json
@@ -174,7 +174,15 @@
         "apis.RouteResp": {
             "type": "object",
             "properties": {
+                "avoidProbes": {
+                    "description": "需要避让的探头",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/drive.Coord"
+                    }
+                },
                 "avoid_areas": {
+                    "description": "需要避让的区域",
                     "type": "array",
                     "items": {
                         "type": "array",
@@ -184,6 +192,7 @@
                     }
                 },
                 "debug": {
+                    "description": "debug信息",
                     "$ref": "#/definitions/apis.Debug"
                 }
             }
