# pkg/apiserver/api.go
@@ -31,12 +31,12 @@ func (s *APIServer) route(c *gin.Context) {
 	// 起点，终点
 	from, to := drive.Coord{Lat: req.FromLat, Lon: req.FromLon}, drive.Coord{Lat: req.ToLat, Lon: req.ToLon}
 	//根据直线距离计算需要避让的探头
-	avoidAreas, debug, err := s.lbs.Route(from, to)
+	avoidAreas, avoidProbes, debug, err := s.lbs.Route(from, to)
 	if err != nil {
 		Result(http.StatusInternalServerError, apis.RouteResp{Debug: debug}, err.Error(), c)
 		return
 	}
-	Result(http.StatusOK, apis.RouteResp{AvoidAreas: avoidAreas, Debug: debug}, "", c)
+	Result(http.StatusOK, apis.RouteResp{AvoidAreas: avoidAreas, AvoidProbes: avoidProbes, Debug: debug}, "", c)
 }
 
 // probes
